syntax = "proto3";

package content.v1;

option go_package = "fuck_boss/backend/api/proto/content/v1;contentv1";

// ContentService 内容服务
service ContentService {
  // CreatePost 创建曝光内容
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  
  // ListPosts 获取内容列表
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
  
  // GetPost 获取内容详情
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  
  // SearchPosts 搜索内容
  rpc SearchPosts(SearchPostsRequest) returns (SearchPostsResponse);
}

// CreatePostRequest 创建请求
message CreatePostRequest {
  string company = 1;        // 公司名称
  string city_code = 2;      // 城市代码
  string city_name = 3;      // 城市名称（用于创建 City 值对象）
  string content = 4;        // 内容
  int64 occurred_at = 5;     // 发生时间（Unix 时间戳，可选，0 表示未设置）
}

// CreatePostResponse 创建响应
message CreatePostResponse {
  string post_id = 1;        // 帖子 ID
  int64 created_at = 2;      // 创建时间（Unix 时间戳）
}

// ListPostsRequest 列表请求
message ListPostsRequest {
  string city_code = 1;      // 城市代码
  int32 page = 2;            // 页码（从 1 开始）
  int32 page_size = 3;       // 每页数量
}

// ListPostsResponse 列表响应
message ListPostsResponse {
  repeated Post posts = 1;   // 帖子列表
  int32 total = 2;           // 总数
  int32 page = 3;            // 当前页码
  int32 page_size = 4;       // 每页数量
}

// GetPostRequest 详情请求
message GetPostRequest {
  string post_id = 1;        // 帖子 ID
}

// GetPostResponse 详情响应
message GetPostResponse {
  Post post = 1;             // 帖子详情
}

// SearchPostsRequest 搜索请求
message SearchPostsRequest {
  string keyword = 1;        // 搜索关键词
  string city_code = 2;      // 城市代码（可选，空字符串表示搜索所有城市）
  int32 page = 3;            // 页码（从 1 开始）
  int32 page_size = 4;       // 每页数量
}

// SearchPostsResponse 搜索响应
message SearchPostsResponse {
  repeated Post posts = 1;   // 帖子列表
  int32 total = 2;           // 总数
  int32 page = 3;            // 当前页码
  int32 page_size = 4;       // 每页数量
}

// Post 帖子
message Post {
  string id = 1;             // 帖子 ID
  string company = 2;        // 公司名称
  string city_code = 3;      // 城市代码
  string city_name = 4;      // 城市名称
  string content = 5;        // 内容
  int64 occurred_at = 6;     // 发生时间（Unix 时间戳，0 表示未设置）
  int64 created_at = 7;      // 创建时间（Unix 时间戳）
}

